deployment/kubernetes/account-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account-gateway
  name: account-gateway
spec:
  selector:
    matchLabels:
      app: account-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: account-gateway
    spec:
      containers:
      - env:
        - name: PORT
          value: "3000"
        - name: BASE_URL
          value: https://account.totem.gdn
        - name: REDIS_STORAGE_URI
          value: redis://redis:6379/0
        - name: KEYSTORE_HOST
          value: keystore
        - name: KEYSTORE_PORT
          value: "50051"
        - name: AUTH_PROVIDERS
          value: google,facebook,twitter
        image: 667950714614.dkr.ecr.us-east-1.amazonaws.com/account-gateway:0.6
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: account-gateway
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
