deployment/kubernetes/account-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account-gateway
  name: account-gateway
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: account-gateway
  type: LoadBalancer
