deployment/kubernetes/account-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod" 
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - account.totem.gdn
    secretName: account.totem.gdn-tls
  rules:
  - host: account.totem.gdn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: account-gateway
            port:
              number: 443
